--- a/styles.css
+++ b/styles.css
@@ -178,6 +178,57 @@ a {
     transform: translateY(2px);
 }
 
+/* Home Query */
+@media screen and (max-width: 600px) {
+    .home {
+        align-items: flex-start;
+        padding-right: 50%;
+        max-width: 600px;
+        max-height: 100%;
+        width: 100%;
+        height: 100vh;
+        z-index: 1;
+    };
+    .plz {
+        display: flex;
+        position: absolute;
+        padding: 10px;
+        height: 50%;
+        width: 50%;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        border-radius: 20px;
+        background-color: rgba(0, 29, 181, 0.8);
+        z-index: 10;
+        overflow: hidden;
+    }
+
+    h1 {
+        font-size: 30px;
+    }
+
+    h2, p {
+        font-size: 15px;
+    }
+
+    .alert {
+        display: none;
+    }
+
+    .btn {
+        display: inline-block;
+        padding: 0.5rem 1rem;
+        border-radius: 10px;
+        margin-top: 10px;
+    }
+    
+    .vrc-btn {
+        font-size: 1.5rem;
+        background: var(--sona-eye);
+    }
+}
+
 /* Sona Art AND VRC Photos */
 .sona-art, .vrc-pics {
     text-align: center;
@@ -198,6 +249,17 @@ a {
     max-height: 477px;
     object-fit: cover;
     object-position: 50% 50%;
+}
+
+/* Picture Query */
+@media screen and (max-width: 600px) {
+    .art-pic, .vrc-photo {
+        width: auto;
+        height: auto;
+        max-height: 200px;
+        object-fit: cover;
+        object-position: 50% 50%;
+    }
 }
 
 /* Transition One */
