--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ a {
     width: 100%;
     height: 100vh;
     background-color: var(--sona-blue);
-    background-image: url(/vrc-photos/spaceshrug.png);
+    background-image: url(/vrc-photos-new/spaceshrug.jpeg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -280,7 +280,7 @@ a {
     width: 100%;
     height: 50vh;
     background-color: var(--sona-blue);
-    background-image: url(/vrc-photos/ohno.png);
+    background-image: url(/vrc-photos-new/ohno.jpeg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -347,7 +347,7 @@ a {
     width: 100%;
     height: 50vh;
     background-color: var(--sona-blue);
-    background-image: url(/vrc-photos/fear.png);
+    background-image: url(/vrc-photos-new/fear.jpeg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
