--- a/styles.css
+++ b/styles.css
@@ -280,7 +280,7 @@ a {
     width: 100%;
     height: 50vh;
     background-color: var(--sona-blue);
-    background-image: url(/vrc-photos-new/ohno.jpeg);
+    background-image: url(/vrc-photos-new/ohno-compressed.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -347,7 +347,7 @@ a {
     width: 100%;
     height: 50vh;
     background-color: var(--sona-blue);
-    background-image: url(/vrc-photos-new/fear.jpeg);
+    background-image: url(/vrc-photos-new/fear-compressed.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
